Change splash video fit to contain to prevent cropping

--- a/src/style.css
+++ b/src/style.css
@@ -52,7 +52,7 @@
 #splash-video {
   width: 100vw;
   height: 100dvh;
-  object-fit: cover;
+  object-fit: contain;
   object-position: center;
 }
 
